<resources>
    <string name="app_name">ASKIMS Smart Pre-Inspection</string>

    <!-- Strings related to login -->
    <string name="prompt_email">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_login_failed">Login Failed</string>
    <string name="error_field_required">This field is required</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_intimation_list">Intimations List</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="intimation_id">Intimation ID #</string>
    <string name="name">Name:</string>
    <string name="contact">Contact:</string>
    <string name="address">Address:</string>
    <string name="summary">Summary</string>
    <string name="date_of_inspection">Date of Inspection</string>
    <string name="cnic">Insured CNIC</string>
    <string name="cnic_own">Owner CNIC</string>
    <string name="ntn_own">Owner NTN</string>
    <string name="marketing_agent">Marketing Agent</string>
    <string name="vehicle_make">Vehicle Make</string>
    <string name="model">Model</string>
    <string name="select_coverage_type">Select Coverage Type</string>
    <string name="private_">Private</string>
    <string name="commercial">Commercial</string>
    <string name="select_usage_type_if_commercial">Select Usage Type (if commercial)</string>
    <string name="private_carrier_permit">Private Carrier Permit</string>
    <string name="public_carrier_permit">Public Carrier Permit</string>
    <string name="registration_number">Registration Number</string>
    <string name="registration_date">Registration Date</string>
    <string name="chassis_number">Chassis Number</string>
    <string name="engine_number">Engine Number</string>
    <string name="color_condition">Color Condition</string>
    <string name="good">Good</string>
    <string name="fair">Fair</string>
    <string name="faded">Faded</string>
    <string name="color">Color</string>
    <string name="owner_name">Owner Name</string>
    <string name="time">Time</string>
    <string name="location_of_inspection">Location Of Inspection</string>
    <string name="last_insured_with">Last Insured with</string>
    <string name="detail_if_re_conditioned">Detail (If Re-Conditioned)</string>
    <string name="is_the_vehicle_reconditioned">Is the vehicle reconditioned?</string>
    <string name="is_vehicle_being_acquired_under_purchase">Is vehicle being acquired under purchase?</string>
    <string name="uncovered">Uncovered</string>
    <string name="open_and_covered">Open and Covered</string>
    <string name="garage">Garage</string>
    <string name="parking_condition">Parking Condition</string>
    <string name="is_insured_owner_of_the_vehicle">Is insured owner of the vehicle?</string>
    <string name="owner_address">Owner Address</string>
    <string name="market_value">Market Value</string>
    <string name="est_vehicle_market_value">Est. Vehicle Market Value</string>
    <string name="est_accessories_market_value">Est. Accessories Market Value</string>
    <string name="accessories">Accessories</string>
    <string name="odometer">Odometer</string>
    <string name="jack_rod">Jack Rod</string>
    <string name="cassette_radio">Cassette/Radio</string>
    <string name="cd_player">CD Player</string>
    <string name="spare_wheel">Spare Wheel</string>
    <string name="air_conditioner">Air conditioner</string>
    <string name="other_accessories_if_any">Other Accessories If Any</string>
    <string name="odometer_reading">Odometer Reading</string>
    <string name="horsepower">Horsepower</string>
    <string name="general_points">General Points</string>
    <string name="head_lights">Head Lights</string>
    <string name="rear_lights">Rear Lights</string>
    <string name="parking_lights">Parking Lights</string>
    <string name="indicator_lights">Indicator Lights</string>
    <string name="bumper">Bumper</string>
    <string name="dents_if_any">Dents If Any</string>
    <string name="general_condition">General Condition</string>
    <string name="no_intimations">No Intimations To Show</string>
    <string name="add_remarks">Add Remarks</string>
    <string name="downloading_data">Downloading Data</string>
    <string name="error_try_again">ERROR: Try Again!</string>
    <string name="nothing_to_show_here">Nothing To Show Here</string>
    <string name="image_being_uploaded">Please Wait Image is being uploaded.</string>
    <string name="under_process">Under Process</string>
    <string name="processed">Processed</string>
    <string name="pending">Pending</string>
    <string name="inspector_profile">Inspector Profile</string>
    <string name="my_profile">My Profile</string>
    <string name="log_out">Log Out</string>
    <string name="support_address">Support Address:</string>
    <string name="support_email">askims-pi@agico.com.pk</string>

    <array name="photo_upload_options">
        <item>Take Picture</item>
        <item>Choose From Gallery</item>
    </array>
</resources>
